cel/C0001-container-image-tag/policy-C0001.yaml
# SPDX-FileCopyrightText: Copyright (C) Nicolas Lamirault <nicolas.lamirault@gmail.com>
# SPDX-License-Identifier: Apache-2.0

---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicy
metadata:
  name: c0001.container.portefaix.xyz
spec:
  matchConstraints:
    resourceRules:
    - apiGroups:   ["apps"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["deployments","replicasets","daemonsets","statefulsets"]
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods"]
    - apiGroups:   ["batch"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["jobs","cronjobs"]
  validations:
  - expression: "object.spec.template.spec.containers.all(c, !c.image.contains(':latest'))"
    message: "Cannot use the latest tag"
  - expression: 'object.spec.containers.all(c, c.image.matches("[0-9]+\\.[0-9]+\\.[0-9]$"))'
    message: "Container images have a SemVer version"
  auditAnnotations:
  - key: "container-invalid-image-tag"
    valueExpression: "Container image must have a SemVer version and not lastest tag"
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: c0001.container.portefaix.xyz
spec:
  policyName: c0001.container.portefaix.xyz
  validationActions: [Warn, Audit]
